fix: fix overflow shadow area on mobile

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -115,34 +115,42 @@
   @apply ring-ring ring-offset-background underline decoration-[1.5px] ring-offset-2 outline-none;
 }
 
-.prose h2::before {
-  @apply absolute top-0 -right-3 -bottom-3 -left-0 -z-20 border-2 border-[var(--border)] bg-black/80;
+.prose {
+  & :is(:where(h2):not(:where([class~="not-prose"], [class~="not-prose"] *))) {
+    &::before {
+      @apply absolute top-0 -right-3 -bottom-3 -left-0 -z-20 border-2 border-[var(--border)] bg-black/80;
 
-  background-image: repeating-linear-gradient(
-    45deg,
-    var(--border) 0,
-    var(--border) 2px,
-    var(--shadow) 0,
-    var(--shadow) 50%
-  );
-  clip-path: polygon(
-    0 0,
-    calc(100% - 13px) 0,
-    100% 13px,
-    100% 100%,
-    100% 100%,
-    12px 100%,
-    0 calc(100% - 12px),
-    0 0
-  );
-  background-size: 12px 12px;
-  background-attachment: local;
-  content: " ";
+      background-image: repeating-linear-gradient(
+        45deg,
+        var(--border) 0,
+        var(--border) 2px,
+        var(--shadow) 0,
+        var(--shadow) 50%
+      );
+      clip-path: polygon(
+        0 0,
+        calc(100% - 13px) 0,
+        100% 13px,
+        100% 100%,
+        100% 100%,
+        12px 100%,
+        0 calc(100% - 12px),
+        0 0
+      );
+      background-size: 12px 12px;
+      background-attachment: local;
+      content: " ";
+    }
+  }
 }
 
-.prose h2::after {
-  @apply bg-background border-border absolute inset-0 -z-10 border-2;
-  content: " ";
+.prose {
+  & :is(:where(h2):not(:where([class~="not-prose"], [class~="not-prose"] *))) {
+    &::after {
+      @apply bg-background border-border absolute inset-0 -z-10 border-2;
+      content: " ";
+    }
+  }
 }
 
 .page {
@@ -153,6 +161,7 @@
   @apply border-border pointer-events-none absolute inset-0 border-2;
   content: " ";
 }
+
 .page::before {
   @apply absolute top-0 right-0 -bottom-3 left-0 -z-20 border-2 border-[var(--border)];
 
